--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qa_wolf_take_home",
+  "name": "hackernews_webscrapper",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
